--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,23 +1,20 @@
 <% @title = 'パスワード再設定' %>
 
-<h4 class="mt-5 mx-auto form-group col-md-4">パスワード再設定</h4>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div class="field form-group mx-auto col-md-4">
-    <%= f.label :password, "パスワード（6文字以上）" %><br />
-    <%= f.password_field :password, autofocus: true, class: 'form-control' %>
-  </div>
-
-  <div class="field form-group mx-auto col-md-4">
-    <%= f.label :password_confirmation, "パスワード（確認用）" %><br />
-    <%= f.password_field :password_confirmation, class: 'form-control' %>
-  </div>
-
-  <div class="actions form-group mx-auto col-md-4">
-    <%= f.submit "登録する", class: 'btn btn-primary' %>
-  </div>
-<% end %>
-
+<div class="col-lg-5 mx-auto">
+  <h5 class="mt-4 form-group">パスワード再設定</h5>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+    <%= f.hidden_field :reset_password_token %>
+    <div class="field form-group">
+      <%= f.label :password, "パスワード（6文字以上）" %><br />
+      <%= f.password_field :password, autofocus: true, class: 'form-control' %>
+    </div>
+    <div class="field form-group">
+      <%= f.label :password_confirmation, "パスワード（確認用）" %><br />
+      <%= f.password_field :password_confirmation, class: 'form-control' %>
+    </div>
+    <div class="actions form-group">
+      <%= f.submit "登録する", class: 'btn btn-primary' %>
+    </div>
+  <% end %>
 <%= render "devise/shared/links" %>
+</div>
