--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,15 @@
 <% @title = 'パスワード再設定用メール送信' %>
 
-<h4 class="mt-5 mx-auto form-group col-md-4">パスワード再設定用メール送信</h4>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <div class="field form-group mx-auto col-md-4">
-    <%= f.label :メールアドレス %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
-  </div>
-
-  <div class="actions form-group mx-auto col-md-4">
-    <%= f.submit "送信する", class: 'btn btn-primary' %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<div class="col-lg-5 mx-auto">
+  <h5 class="mt-4 form-group">パスワード再設定用メール送信</h5>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+    <div class="field form-group">
+      <%= f.label :メールアドレス %><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+    </div>
+    <div class="actions form-group">
+      <%= f.submit "送信する", class: 'btn btn-primary' %>
+    </div>
+  <% end %>
+  <%= render "devise/shared/links" %>
+</div>
