--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,91 +1,79 @@
 <% @title = '設定' %>
 <% user = current_user %>
 
-<ul class="nav nav-tabs col-md-5 mx-auto mt-3" id="myTab" role="tablist">
-  <li class="nav-item">
-    <a class="nav-link active" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="true">プロフィール</a>
-  </li>
-  <% unless user.provider == 'twitter' %>
-  <li class="nav-item">
-    <a class="nav-link" id="mail-tab" data-toggle="tab" href="#mail" role="tab" aria-controls="mail" aria-selected="false">メールアドレス</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" id="password-tab" data-toggle="tab" href="#password" role="tab" aria-controls="password" aria-selected="false">パスワード</a>
-  </li>
-  <% end %>
-  <li class="nav-item">
-    <a class="nav-link" id="delete-tab" data-toggle="tab" href="#delete" role="tab" aria-controls="delete" aria-selected="false">アカウント削除</a>
-  <li>
-</ul>
-<div class="tab-content" id="myTabContent">
-  <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-      <div class="field form-group mx-auto col-md-4 mt-3">
-        <%= f.label :アイコン %><br />
-        <%= image_tag user.avatar.url, class: 'mb-2' %>
-        <%= f.file_field :avatar, class: 'filestyle', "data-buttonBefore": true %>
-      </div>  
-      <div class="field form-group mx-auto col-md-4">
-        <%= f.label :ハンドルネーム %><br />
-        <%= f.text_field :name, autofocus: true, class: 'form-control' %>
-      </div>
-      <div class="field form-group mx-auto col-md-4">
-        <%= f.label :自己紹介 %><br />
-        <%= f.text_area :profile, rows: 2, class: 'form-control' %>
-      </div>
-      <div class="field form-group mx-auto col-md-4">
-        <%= f.label :Twitterアカウント（プロフィールにリンクを表示します。空欄の場合非表示となります） %><br />
-        <%= f.text_field :twitter_id, class: 'form-control' %>
-      </div>
-      <div class="form-group actions mx-auto col-md-4">
-        <%= f.submit "変更する", class: 'btn btn-primary' %>
-      </div>
+<div class="col-lg-5 mx-auto">
+  <ul class="nav nav-tabs mt-3" id="myTab" role="tablist">
+    <li class="nav-item">
+      <a class="nav-link active" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="true">プロフィール</a>
+    </li>
+    <% unless user.provider == 'twitter' %>
+    <li class="nav-item">
+      <a class="nav-link" id="mail-tab" data-toggle="tab" href="#mail" role="tab" aria-controls="mail" aria-selected="false">メールアドレス</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" id="password-tab" data-toggle="tab" href="#password" role="tab" aria-controls="password" aria-selected="false">パスワード</a>
+    </li>
     <% end %>
-  </div>
-  <% unless user.provider == 'twitter' %>
-  <div class="tab-pane fade" id="mail" role="tabpanel" aria-labelledby="mail-tab">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-      <div class="field form-group mx-auto col-md-4 mt-3">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
-      </div>
-  
-      <div class="form-group actions mx-auto col-md-4">
-        <%= f.submit "変更する", class: 'btn btn-primary' %>
-      </div>
+    <li class="nav-item">
+      <a class="nav-link" id="delete-tab" data-toggle="tab" href="#delete" role="tab" aria-controls="delete" aria-selected="false">アカウント削除</a>
+    <li>
+  </ul>
+  <div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <div class="field form-group mt-3">
+          <%= f.label :アイコン %><br />
+          <%= image_tag user.avatar.url, class: 'mb-2' %>
+          <%= f.file_field :avatar, class: 'filestyle', "data-buttonBefore": true %>
+        </div>  
+        <div class="field form-group">
+          <%= f.label :ハンドルネーム %><br />
+          <%= f.text_field :name, autofocus: true, class: 'form-control' %>
+        </div>
+        <div class="field form-group">
+          <%= f.label :自己紹介 %><br />
+          <%= f.text_area :profile, rows: 2, class: 'form-control' %>
+        </div>
+        <div class="field form-group">
+          <%= f.label :Twitterアカウント（プロフィールにリンクを表示します。空欄の場合非表示となります） %><br />
+          <%= f.text_field :twitter_id, class: 'form-control' %>
+        </div>
+        <div class="form-group actions">
+          <%= f.submit "変更する", class: 'btn btn-primary' %>
+        </div>
+      <% end %>
+    </div>
+    <% unless user.provider == 'twitter' %>
+    <div class="tab-pane fade" id="mail" role="tabpanel" aria-labelledby="mail-tab">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <div class="field form-group">
+          <%= f.label :email %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+        </div>
+    
+        <div class="form-group actions">
+          <%= f.submit "変更する", class: 'btn btn-primary' %>
+        </div>
+      <% end %>
+    </div>
+    <div class="tab-pane fade" id="password" role="tabpanel" aria-labelledby="password-tab">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <div class="field form-group mx-auto  mt-3">
+          <%= f.label :パスワード（6文字以上） %><br />
+          <%= f.password_field :password, class: 'form-control' %>
+        </div>
+        <div class="field form-group">
+          <%= f.label :パスワード（確認用） %><br />
+          <%= f.password_field :password_confirmation, class: 'form-control' %>
+        </div>
+        <div class="form-group actions">
+          <%= f.submit "変更する", class: 'btn btn-primary' %>
+        </div>
+      <% end %>
+    </div>
     <% end %>
-  </div>
-  <div class="tab-pane fade" id="password" role="tabpanel" aria-labelledby="password-tab">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-      <div class="field form-group mx-auto col-md-4 mt-3">
-        <%= f.label :パスワード（6文字以上） %><br />
-        <%= f.password_field :password, class: 'form-control' %>
-      </div>
-  
-      <div class="field form-group mx-auto col-md-4">
-        <%= f.label :パスワード（確認用） %><br />
-        <%= f.password_field :password_confirmation, class: 'form-control' %>
-      </div>
-  
-      <div class="form-group actions mx-auto col-md-4">
-        <%= f.submit "変更する", class: 'btn btn-primary' %>
-      </div>
-    <% end %>
-  </div>
-  <% end %>
-  <div class="tab-pane fade" id="delete" role="tabpanel" aria-labelledby="delete-tab">
-    <div class="field form-group mx-auto col-md-4 mt-3"> <%= button_to "アカウントを削除する", registration_path(resource_name), data: { confirm: "アカウントを削除すると、投稿した短歌もすべて削除されます。本当に削除しますか？" }, method: :delete, class: 'btn btn-primary' %></div>
+    <div class="tab-pane fade" id="delete" role="tabpanel" aria-labelledby="delete-tab">
+      <div class="field form-group mx-auto  mt-3"> <%= button_to "アカウントを削除する", registration_path(resource_name), data: { confirm: "アカウントを削除すると、投稿した短歌もすべて削除されます。本当に削除しますか？" }, method: :delete, class: 'btn btn-primary' %></div>
+    </div>
   </div>
 </div>
-
-<script>
-$(function() {
-  $('a[data-toggle="tab"]').on('click', function(e) {
-    window.localStorage.setItem('activeTab', $(this).attr('href'))
-  })
-  var activeTab = window.localStorage.getItem('activeTab')
-  if (activeTab) {
-    $('#myTab a[href="' + activeTab + '"]').tab('show')
-  }
-})
-</script>
