--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -2,16 +2,16 @@
 
 <%= render 'layouts/error_messages', resource: @post %>
 
-<div data-controller="post">
+<div data-controller="post" class="col-lg-5 mx-auto">
   <%= form_for(@post, url: { controller: :posts, action: :update }) do |f| %>
-    <div class="form-group mx-auto col-md-4 mt-4">
+    <div class="form-group mt-3">
       <%= f.label :投稿日時 %>
       <%= f.datetime_local_field :published_at, value: @post.published_at.strftime('%Y-%m-%dT%H:%M'), class: "form-control" %>
     </div>
-    <div class="form-group mx-auto col-md-4 mt-4">
+    <div class="form-group mt-3">
       <%= f.text_area :tanka, rows: 3, autofocus: true, class: 'form-control', 'data-target': 'post.input', 'data-action': 'keyup->post#previewPost compositionend->post#previewPost' %>
     </div>
-    <div class="form-group mx-auto col-md-4">
+    <div class="form-group">
       <%= f.submit "変更する", class: 'btn btn-primary' %>
       <button type="button" class="btn btn-primary" data-action="click->post#ruby">ルビ</button>
       <button type="button" class="btn btn-primary" data-action="click->post#upright">縦中横</button>
