--- a/app/views/posts/followers.html.erb
+++ b/app/views/posts/followers.html.erb
@@ -8,12 +8,12 @@
     <% else %>
        <i class="sm hearts fas fa-heart middle"></i><span class="sm horizontal hearts middle"><%= @post.followers_by_type_count('User') %></span>
     <% end %>
-    <%= link_to (image_tag @user.avatar.url(:small)), user_path(id: @user.id), method: :get %>
+    <%= link_to (image_tag @user.avatar.url(:small), class: 'rounded'), user_path(id: @user.id), method: :get %>
   </h6>
   <%= paginate @users %>
   <% @users.each do |user| %>
     <p>
-      <%= link_to (image_tag user.avatar.url(:medium), align: 'center'), user_path(id: user.id), method: :get, class: 'tanka-link' %>&nbsp;
+      <%= link_to (image_tag user.avatar.url(:medium), class: 'rounded'), user_path(id: user.id), method: :get, class: 'tanka-link' %>&nbsp;
       <%= link_to user.name, user_path(id: user.id), method: :get, class: 'tanka-link lg' %>
     </p>
   <% end %>
