--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 
 <div class = "vertical serif tanka-index mt-3">
   <div class="margin-right">
-    <%= image_tag @user.avatar.url(:original), align: 'center' %>&nbsp;
+    <%= image_tag @user.avatar.url(:original), class: 'rounded' %>&nbsp;
     <span class="lg middle"><%= @user.name %></span>&nbsp;
     <% if @user.twitter_id.present? %>
       <a href="<%= 'https://twitter.com/' + @user.twitter_id %>" target="_blank"><i class="middle lg fab fa-twitter"></i></a>&nbsp;
