--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,38 +3,76 @@
 @import "font-awesome";
 @import "toastr";
 
+$utakata-blue: #0095d9;
+$utakata-blue-hover: #00a7f3;
+$utakata-red: #e60033;
+
+a {
+  color: $utakata-blue;
+}
+
+a:hover {
+  color: $utakata-blue-hover;
+}
+
+.fa-twitter {
+  color: $utakata-blue;
+}
+
+.fa-user {
+  color: $utakata-blue;
+  vertical-align: middle;
+}
+
+.fa-heart {
+  color: $utakata-red;
+  vertical-align: middle;
+}
+
+.page-link {
+  color: $utakata-blue;
+}
+
+.page-item.active .page-link {
+  background-color: $utakata-blue;
+  border-color: $utakata-blue;
+}
+
+.border-primary {
+  border: 1px solid $utakata-blue;
+}
+
 .navbar {
-  background-color: #0095d9;
-  padding-top: 0;
-  padding-bottom: 0;
+  background-color: $utakata-blue;
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #0095d9;
-  border-color: #0095d9;
+  color: white;
+  background-color: $utakata-blue;
+  border-color: $utakata-blue;
 }
 
 .btn-primary:hover {
-  color: #fff;
-  background-color: #00a7f3;
-  border-color: #0095d9;
+  color: white;
+  background-color: $utakata-blue-hover;
+  border-color: $utakata-blue;
 }
 
 .btn-primary-reversed {
-  color: #0095d9;
-  background-color: #fff;
-  border-color: #fff;
+  color: $utakata-blue;
+  background-color: white;
+  border-color: white;
 }
 
 .btn-primary-reversed:hover {
-  color: #fff;
-  background-color: #00a7f3;
-  border-color: #0095d9;
+  color: white;
+  background-color: $utakata-blue-hover;
+  border-color: $utakata-blue;
 }
 
 .tanka-link {
   color: black;
+  vertical-align: middle;
 }
 
 .tanka-link:hover {
@@ -55,11 +93,6 @@
   font-size: 0.9em;
 }
 
-.profile {
-  padding: 1em;
-  border: 1px solid #0095d9;
-}
-
 .serif {
   font-family: 'Hiragino Mincho ProN', 'Yu Mincho', serif;
 }
@@ -70,8 +103,14 @@
   overflow: scroll;
 }
 
-.margin-right {
-  margin-right: 1em;
+.user-show {
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+}
+
+.user-show-tankas {
+  white-space: nowrap;
 }
 
 h5 {
@@ -92,36 +131,25 @@ h6 {
   writing-mode: horizontal-tb;
 }
 
-.hearts {
-  color: #e60033;
-}
-
-.hearts:hover {
-  color: #e60033;
-}
-
-.middle {
+.like {
+  color: $utakata-red;
   vertical-align: middle;
+  -webkit-writing-mode: horizontal-tb;
+  -ms-writing-mode: rl;
+  writing-mode: horizontal-tb;
 }
 
-.wh {
-  color: white;
+.like:hover {
+  color: $utakata-red;
 }
 
-.bell {
+.fa-bell {
   font-size: 1.7em;
+  color: white;
 }
 
 .top {
   margin-top: -1em;
-}
-
-.mr {
-  margin-right: 0.6em;
-}
-
-.person {
-  color: #0095d9;
 }
 
 .ml {
@@ -131,18 +159,6 @@ h6 {
 .description {
   margin-left: -2em;
   margin-bottom: 0.5em;
-}
-
-.pd0 {
-  padding: 0;
-}
-
-.width0 {
-  width: 0;
-}
-
-.hidden {
-  visibility: hidden;
 }
 
 .tate {
