--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -37,6 +37,7 @@
     <dt><time>2019/03/09</time></dt>
     <dd>
       <ul class="ml">
+        <li>アイコンを角丸に変更</li>
         <li>表示レイアウトを調整</li>
       </ul>
     </dd>
