--- a/app/views/layouts/_posts.html.erb
+++ b/app/views/layouts/_posts.html.erb
@@ -1,11 +1,11 @@
 <% @posts.each do |post| %>
   <p>
-    <%= link_to post.tanka.html_safe, post_path(id: post.id), method: :get, class: 'tanka-link middle' %>&nbsp;
+    <%= link_to post.tanka.html_safe, post_path(id: post.id), method: :get, class: 'tanka-link' %>&nbsp;
     <% if user_signed_in? && current_user.id != post.user_id %>
       <%= render 'favorites/favorites', post: post, size: 'sm' %>
     <% else %>
-      <i class="sm hearts fas fa-heart middle"></i><!--
-      --><span class="sm horizontal hearts middle"><%= post.followers_by_type_count('User') %></span>
+      <i class="sm fas fa-heart"></i><!--
+      --><span class="sm like"><%= post.followers_by_type_count('User') %></span>
     <% end %>
     <% user = User.find(post.user_id) %>
     <%= link_to (image_tag user.avatar.url(:small), class: 'rounded'), user_path(id: user.id), method: :get %>
