--- a/app/views/posts/my_search.html.erb
+++ b/app/views/posts/my_search.html.erb
@@ -7,8 +7,8 @@
   <%= paginate @posts %>
   <% @posts.each do |post| %>
     <p>
-      <%= link_to post.tanka.html_safe, post_path(id: post.id), method: :get, class: 'middle tanka-link' %>&nbsp;
-      <i class="sm middle hearts fas fa-heart"></i><span class="middle sm horizontal hearts"><%= post.followers_by_type_count('User') %></span>
+      <%= link_to post.tanka.html_safe, post_path(id: post.id), method: :get, class: 'tanka-link' %>&nbsp;
+      <i class="sm fas fa-heart"></i><span class="sm like"><%= post.followers_by_type_count('User') %></span>
     </p>
   <% end %>
   <%= paginate @posts %>
