--- a/app/views/users/notifications.html.erb
+++ b/app/views/users/notifications.html.erb
@@ -5,19 +5,23 @@
   <% @notifications.each do |notification| %>
     <p>
       <% if notification.followable_type == 'User' %> 
-        <i class="person fas fa-user middle"></i>
+        <i class="fas fa-user"></i>
         <% user = User.find(notification.follower_id) %>
         <%= link_to (image_tag user.avatar.url(:small), class: 'rounded'), user_path(id: user.id), method: :get %>
-        <%= link_to user.name, user_path(id: user.id), method: :get, class: 'middle' %><span class="middle">さんにフォローされました</span>
-        <span class="middle"><%= notification.created_at.strftime('%Y.%-m.%-d') %></span>
+        <span class="align-middle">
+          <%= link_to user.name, user_path(id: user.id), method: :get %>さんにフォローされました
+          <%= notification.created_at.strftime('%Y.%-m.%-d') %>
+        </span>
       <% else %>
-        <i class="hearts fas fa-heart middle"></i>
+        <i class="fas fa-heart"></i>
         <% user = User.find(notification.follower_id) %>
         <%= link_to (image_tag user.avatar.url(:small), class: 'rounded'), user_path(id: user.id), method: :get %>
         <% post = Post.find(notification.followable_id) %>
         <% tanka = ApplicationController.helpers.strip_tags(post.tanka) %>
-        <%= link_to user.name, user_path(id: user.id), method: :get, class: 'middle' %><span class="middle">さんがいいねしました「<%= link_to (tanka.slice(0, 5) + '…'), followers_post_path(id: post.id), method: :get, method: :get %>」</span>
-        <span class="middle"><%= notification.created_at.strftime('%Y.%-m.%-d') %></span>
+        <span class="align-middle">
+          <%= link_to user.name, user_path(id: user.id), method: :get %>さんがいいねしました「<%= link_to (tanka.slice(0, 5) + '…'), followers_post_path(id: post.id), method: :get, method: :get %>」
+          <%= notification.created_at.strftime('%Y.%-m.%-d') %>
+        </span>
       <% end %>
     </p>
   <% end %>
