--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -38,7 +38,7 @@
     <dd>
       <ul class="ml">
         <li>アイコンを角丸に変更</li>
-        <li>表示レイアウトを調整</li>
+        <li>表示レイアウトを全体的に調整</li>
       </ul>
     </dd>
     <dt><time>2019/03/03</time></dt>
