--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -100,16 +100,20 @@ a:hover {
 .tanka-index {
   width: 100%;
   white-space: nowrap;
-  overflow: scroll;
+  overflow-x: scroll;
 }
 
 .user-show {
   width: 100%;
-  height: 90%;
-  overflow: scroll;
+  overflow-x: scroll;
+  overflow-y: visible;
 }
 
-.user-show-tankas {
+.hh {
+  height: 90vh;
+}
+
+.nowrap {
   white-space: nowrap;
 }
 
