--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -18,5 +18,5 @@
       <button type="button" class="btn btn-primary" data-action="click->post#space">全角スペース</button>
     </div>
   <% end %>
-  <div class="vertical serif mx-auto" data-target="post.preview"></div>
+  <div class="vertical serif mx-auto nowrap" data-target="post.preview"></div>
 </div>
