--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -101,11 +101,13 @@ a:hover {
   width: 100%;
   white-space: nowrap;
   overflow-x: scroll;
+  overflow-y: hidden;
 }
 
 .user-show {
   width: 100%;
   overflow-x: scroll;
+  overflow-y: hidden;
 }
 
 .h-90 {
