--- a/app/views/posts/followers.html.erb
+++ b/app/views/posts/followers.html.erb
@@ -1,14 +1,14 @@
 <% @title = '&heart;'.html_safe + ApplicationController.helpers.strip_tags(@post.tanka) %>
 
 <div class = "vertical serif tanka-index mt-3">
-  <h6 class="mb-3">
+  <h6>
     <%= link_to @post.tanka.html_safe, post_path(id: @post.id), method: :get, class: 'tanka-link' %>&nbsp;
     <% if user_signed_in? && current_user.id != @post.user_id %>
       <%= render 'favorites/favorites', post: @post, size: 'sm' %>
     <% else %>
        <i class="sm fas fa-heart"></i><span class="sm like"><%= @post.followers_by_type_count('User') %></span>
     <% end %>
-    <%= link_to (image_tag @user.avatar.url(:small), class: 'rounded'), user_path(id: @user.id), method: :get %>
+    <%= link_to (image_tag @user.avatar.url(:small), class: 'rounded'), user_path(id: @user.id), method: :get, class: 'mb-3' %>
   </h6>
   <%= paginate @users %>
   <% @users.each do |user| %>
