--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,10 +34,10 @@
       <p>
         <%= link_to post.tanka.html_safe, post_path(id: post.id), method: :get, class: 'tanka-link text-nowrap' %>&nbsp;
         <% if user_signed_in? && current_user.id != post.user_id %>
-          <%= render 'favorites/favorites', post: post, size: 'sm' %>
+          <span class="mb-3"><%= render 'favorites/favorites', post: post, size: 'sm' %></span>
         <% else %>
           <i class="sm fas fa-heart"></i><!--
-          --><span class="sm like"><%= post.followers_by_type_count('User') %></span>
+          --><span class="sm like mb-3"><%= post.followers_by_type_count('User') %></span>
         <% end %>
       </p>
     <% end %>
