ページネーションの角丸のデザインを調整

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -34,6 +34,12 @@
   </div>
   <h5 class="mt-4 form-group">更新履歴</h5>
   <dl class="form-group">
+    <dt><time>2019/03/10</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>ページネーションの角丸のデザインを調整</li>
+      </ul>
+    </dd>
     <dt><time>2019/03/09</time></dt>
     <dd>
       <ul class="ml">
