ハート調整

--- a/app/views/posts/followers.html.erb
+++ b/app/views/posts/followers.html.erb
@@ -1,4 +1,4 @@
-<% @title = '&heart;'.html_safe + ApplicationController.helpers.strip_tags(@post.tanka) %>
+<% @title = 	'&#9829;'.html_safe + ApplicationController.helpers.strip_tags(@post.tanka) %>
 
 <div class = "vertical serif tanka-index mt-3">
   <h6>
