--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -37,7 +37,7 @@
     <dt><time>2019/03/16</time></dt>
     <dd>
       <ul class="ml">
-        <li>画像サイズを最適化してページの表示速度を改善</li>
+        <li>画像サイズを最適化してサイトの表示速度を改善</li>
       </ul>
     </dd>
     <dt><time>2019/03/10</time></dt>
