--- a/app/views/privacy/index.html.erb
+++ b/app/views/privacy/index.html.erb
@@ -20,4 +20,9 @@
     <li>利用者が同意した場合</li>
     <li>法令に基づく場合</li>
   </ul>
+  <h5 class="mt-4">関連リンク</h5>
+  <ul class="ml">
+    <li><%= link_to 'サイトのご案内', infos_path %></li>
+    <li><%= link_to '利用規約', terms_path %></li>
+  </ul>
 </div>
