--- a/app/views/terms/index.html.erb
+++ b/app/views/terms/index.html.erb
@@ -17,12 +17,17 @@
   <h5 id="tanka-definition" class="mt-4">「短歌」の範囲</h5>
   <p>Utakataは短歌投稿サイトなので、「短歌」を投稿していただきたいというのが前提としてあるのですが、何を短歌とみなすかについては、自由律短歌等も短歌とみなす、広義の解釈を採用します。良識の範囲で自由な形式の作品を投稿いただければと思います。</p>
   <h5 class="mt-4">免責事項</h5>
-  <p>投稿短歌のデータの保存には万全を期したいと思いますが、個人で運営しているサービスという都合上、何らかのミスによってデータが喪失する可能性があります。作品のデータのバックアップを用意した上でご利用ください。</p>
-  <p>また、Utakataの利用によって発生した諸々の不利益について、原則として管理者は責任を負いかねます。</p>
+  <p>投稿短歌のデータの保存には万全を期していますが、個人で運営しているサービスという都合上、何らかのミスによってデータが失われる可能性があります。作品のデータのバックアップを用意した上でご利用ください。</p>
+  <p>また、Utakataの利用に起因して発生した諸々の不利益について、原則として管理者は責任を負いかねます。</p>
   <h5 id="contacts" class="mt-4">連絡先</h5>
   <ul class="ml">
     <li>Email：utakatanka@gmail.com</li>
     <li>Twitter：<a href="https://twitter.com/utakatanka" target="_blank">@utakatanka</a></li>
     <li>管理人のTwitter：<a href="https://twitter.com/fuyu77" target="_blank">@fuyu77</a></li>
+  </ul>
+  <h5 class="mt-4">関連リンク</h5>
+  <ul class="ml">
+    <li><%= link_to 'サイトのご案内', infos_path %></li>
+    <li><%= link_to 'プライバシーポリシー', privacy_index_path %></li>
   </ul>
 </div>
