--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -1,4 +1,4 @@
-<% @title = 'ご案内' %>
+<% @title = 'サイトのご案内' %>
 <% @description = '短歌投稿サイトUtakataの概要・使い方・連絡先・更新履歴など。' %>
 
 <div class="col-lg-5 mx-auto">
